--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Tic Tac Toe</title>
+  <title>The Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="/public/normilize.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  
+
 </body>
 
 </html>
