--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,22 @@
 
 </body>
 
+<template id="start-ui">
+  <style>
+    div {
+      color: white;
+      background-color: #666;
+      /* padding: 5px; */
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index :9999;
+      min-width: 400px;
+    }
+  </style>
+
+  <div>Lets the game begin!</div>
+</template>
+
 </html>
